--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<h3>Die empfehlenswerteste Python Entwicklungsumgebung</h3>
 	</div>
 	<div class="text" id="scrollto">
-		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen (IDEs)</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, denn es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Sie hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann die offizielle Python IDE <a href="https://www.python.org/downloads/" target="_blank" style="color:yellow;">hier</a> herunterladen. </p>
+		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen (IDEs)</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, denn es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Sie hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann die offizielle Python IDE <a href="https://www.python.org/downloads/" target="_blank" style="color:ffcc66;">hier</a> herunterladen. </p>
 	</div>
 		</br></br></br>
 		<div class="übertitel">
